<resources>
    <string name="app_name">Pencak Silat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sikap_hormat">Sikap hormat adalah sikap tegak yang digunakan untuk menghormati kawan maupun lawan. Posisi sikap hormat adalah badan tegap, kaki rapat tangan di depan dada terbuka dan rapat dengan jari-jsri tangan menghadap ke atas.</string>
    <string name="sikap_tegak1">sikap tegak 1 : sikap siap dengan posisi berdiri tegak dengan kedua tangan di samping badan terbuka, tumit rapat dan kaki bagian  lurus kedepan  membentuk huruf “V”, pandangan lurus ke depan</string>
    <string name="sikap_tegak2">sikap tegak 2 : sikap siap dengan posisi berdiri tegak dengan kedua tangan kedua tangan di pinggang, tangan mengepal mengarah ke atas, tumit rapat dan kaki bagian depan terbuka membentuk huruf “V”, pandangan lurus ke depan</string>
    <string name="sikap_tegak3">sikap tegak 3 : sikap siap dengan posisi berdiri tegak dengan kedua tangan kedua tangan mengepal menghadap ke atas di depan dada tumit rapat dan kaki bagian depan terbuka membentuk huruf “V”, pandangan lurus ke depan</string>
    <string name="sikap_tegak4">sikap tegak 4 : sikap siap dengan posisi berdiri tegak dengan kedua tangan kedua tangan di depan dada disilangkan dengan tangan kanan di depan posisi terbuka , tumit rapat dan kaki bagian depan terbuka membentuk huruf “V”, pandangan lurus ke depan
</string>
    <string name="sikap_duduk_simpuh">Duduk simpuh: posisi duduk dengan kedua kaki ditekuk dan diduduki, tangan berada di atas paha/ lutut. Pandangan rileks  ke depan, badan tegap.</string>
    <string name="duduk_sila">Duduk sila :  posisi duduk dengan keduya kaki dilipat, tangan berada di atas paha/ lutut. Pandangan rileks  ke depan, badan tegap.</string>
    <string name="duduk_trapsila">Duduk trapsila : posisi duduk dengan posisi kedua kaki dilipat (seperti duduk sia) namun salah satu kaki berada di atas paha, tangan berada di atas paha/lutut. Pandangan rileks  ke depan, badan tegap.</string>
    <string name="duduk_sempok">Duduk Sempok : Posisi duduk dengan kedua kaki ndilipat silang, pandangan rileks  ke depan, badan tegap.</string>
    <string name="sikap_pasang_Satu">sikap pasang dengan posisi kedua kaki segaris/lurus, kaki depan dengan belakang menghadap depan, berat badan pada kaki depan.</string>
    <string name="sikap_pasang_dua"> sikap pasang dengan posisi kedua kaki segaris/ lurus, kaki yang depan membuka (slewah), lutut tidak menempel, kaki belakang jinjit.
</string>
    <string name="sikap_padang_tiga">sikap pasang dengan kaki serong ke luar pandangan ke depan.</string>
    <string name="sikap_pasang_empat">sikap pasang dengan posisi kuda-kuda tengah, tegak kedua lutut ditekuk bberat badan pada ke dua kaki.</string>
    <string name="sikap_pasang_lima">sikap paang dengan posisi kaki menyamping kaki silang belakang, kaki yang disilangkan jinjit</string>
    <string name="sikap_pasang_enam">sikap pasang dengan posisi kuda-kuda tengah menyamping, pandangan ke samping, kedua kaki menghadap depan</string>
    <string name="sikap_pasang_tuju">sikap pasang dengan posisi menyilang ke depan, lutut menempel, berat badan pada kaki bagian depan.</string>
    <string name="sikap_pasang_delapan">sikap pasang dengan posisi satu kaki di angktatau berdiri dengan satu kaki, badan menghadap depan.
</string>
    <string name="serangan_lengan_lurus">Pukulan lurus seperti pukulan tinju, pukulan ini mengarah ke depan, mengepal dan tangan satunya lagi menutup atau melindungi dada. Cara awal melakukan pukulan ini adalah dengan sikap kuda-kuda tengah. Kepalkan kedua tangan di samping pinggang (kepalan tangan menghadap atas). Selanjutnya pukulkan tangan lurus kedepan, pada saat memukul kepalan tangan menghadap ke bawah. Setelah dasar ini bisa dilakukan, untuk sikap awal dapat menggunakan variasai pasang.</string>
    <string name="serangan_lengan_bandul">Pukulan bandul lintasan tangan diayun dari bawah ke atas. Pukulan ini mengayun lengan dengan tangan mengepal ke arah sasaran dengan arah lintasan dari bawah ke atas dan kepalan menghadap atas. Pukulan ini dapat dilaksanakan dengan posisi kaki yang bervariasi. Pada saat salah satu tangan dipukulkan, tangan yang satunya harus ditempatkan sedemikian rupa di depan dada untuk melindungi dari serangan lawan.
</string>
    <string name="serangan_lengan_tebasan">Tebasan dilakukan dengan menggunakan satu atau dua telapak tangan yang terbuka dengan sisi telapak tangan di luar. Arah lintasanya dari luar ke dalam atau dari atas ke bawah, dengan sasaran muka, leher, bahu atau pinggang. Tebasan dapat dilakukan dengan posisi sikap kuda-kuda tengah, tangan kanan/kiri diayunkan dari luar kedalam, siku agak dibengkokan, telapak tangan menghadap ke atas, jari-jari tangan rapat, tangan yang tidak melakukan tebasan melindungi dada atau berada di pinggang
</string>
    <string name="serangan_lengan_tebangan">ebangan yaitu serangan yang menggunakan satu atau dua telapak tangan terbuka dengan perkenaan sisi telapak dalam. Lintasanya dari dalam keluar atau dari luar ke dalam, dengan arah sasaran leher. Tebangan dapat dilakukan dengan posisi sikap kuda-kuda tengah, tangan kanan/kiri diayunkan dari luar ke dalam, siku agak dibengkokan, telapak tangan menghadap ke bawah, jari-jari tangan rapat, tangan yang tidak melakukan tebasan melindungi dada atau berada di pinggang.
</string>
    <string name="serangan_lengan_sangga">Sangga yaitu serangan dengan menggunakan satu/dua telapak tangan terbuka. Bagian perkenaan adalah pangkal telapak tangan dalam. Lintasan dari bawah ke atas, dengan sasaran dagu dan hidung. Sangga dapat dilakukan dengan sikap posisi kuda-kuda tengah, tangan kanan/kiri menyangga dengan sasaran dagu, siku agak dibengkokan, tangan yang tidak melakukan pukulan sangga melindungi dada atau berada di pinggang.</string>
   <string name="latar_belakang_1">Perkembangan ilmu pengetahuan dan teknologi tidak pernah bisa terbendung di belahan dunia manapun tak terkecuali dalam bidang pendidikan. Dahulunya dalam pembelajaran hanya menggunakan kapur dan papan tulis hitam, mulai bergeser menjadi papan tulis putih dan menggunakan spidol, selanjutnya mulai bergeser menjadi seperangkat alat penampil gambar sederhana yang disebut proyektor, sampai pada yang terbaru adalah penggunaan LCD dan papan screen yang disambungkan pada perangkat lunak. Begitu pula dengan mesin ketik yang dulunya manual menggunakan tinta pita sampai akhirnya tercipta sebuah komputer dengan perangkat sederhana dan berkembang menjadi laptop yang kini sudah menjadi kebutuhan dalam dunia kerja dan pendidikan.
</string>
    <string name="latar_belakang_2">Tidak terlepas dari alat komunikasi yang dulunya hanya perangkat telepon kabel yang dikembangkan oleh Alexander Graham Bell selanjutnya diproduksi masal dan disederhanakan menjadi handphone  yang hanya digunakan sekedar alat komunikasi dan mengirim pesan singkat (SMS), lalu berlanjut pada handphone yang dikembangkan tidak hanya untuk mengirim pesan singkat dan telepon namun juga dapat digunakan untuk mencari berbagai informasi apapun menggunakan bantuan paket data dan internet yang sering disebut telepon pintar.
</string>
    <string name="latar_belakang_3">Di dalam telepon pintar terdapat salah satu sistem operasi yang disebut android. Menurut Sherief Salbino (2014: 7) Android merupakan sistem operasi berbasis linux yang bersifat terbuka (open source) dan dirancang untuk perangkat seluler layar sentuh seperti smartphone dan komputer tablet. Sistem operasi ini dibuat terbuka sehingga memungkinkan penggunanya untuk menciptakan aplikasi mereka sendiri. Dewasa ini pengguna android tidak lagi terbatas pada dunia  kerja yang biasa digunakan oleh direktur dan karyawan perusahaan, tetapi mulai merambah ke mahasiswa, siswa sekolah, guru, ibu rumah tangga dan semua orang yang menggunakan telepon pintar sebagian besar telah menggunakan android sebagai sistem operasinya.
Berdasarkan survey techinasia, ternyata android merupakan sistem operasi yang mendominasi peredaran smartphone di tanah air dengan pembagian pasar sebesar 59,91 persen (Lina Noviandari:2014). Padahal dunia pendidikan seharusnya bisa mengikuti perkembangan teknologi, namun penggunaan aplikasi berbasis android sebagai alat bantu pengembangan sumber belajar masih sangat sedikit, khususnya pada mata pelajaran pendidikan jasmani. Padahal, dalam belajar mata pelajaran pendidikan jasmani sebenarnya dapat menggunakan banyak sumber belajar agar siswa tidak jenuh dalam mempelajarinya, terutama pada penampilan pelajaran praktik.
</string>
    <string name="latar_belakang_4">Guru pendidikan jasmani sering kali kesulitan dalam mempresentasikan materi ketika di lapangan, karena terbatasnya situasi kondisi alat dan sumber daya ketika di lapangan. Salah satunya adalah pada pengembangan sumber belajar materi beladiri pencak silat, karena banyaknya praktek di lapangan dari pada teori. Hal ini membuat guru harus selalu memberikan bentuk dan contoh gerakan, menjadi sumber belajar atau media mengenai gerakan yang akan dilakukan siswa, agar siswa dapat melakukan gerakan yang sesuai dengan teknik pada pencak silat. Di sisi lain tidak banyak guru penjas di sekolah yang memasukan materi pelajaran pencak silat sebagai suatu hal yang  perlu dipelajari dalam pelajaran pendidikan jasmani khususnya. Padahal hal ini dapat sangat membantu para siswa untuk mengantisipasi kejahatan minimal untuk melindungi diri sendiri. 
</string>
    <string name="latar_belakang_5">Beladiri pencak silat adalah beladiri asli dari Indonesia yang mudah dipelajari oleh siapapun yang ingin belajar, disisi lain sangat penting untuk perlindungan diri dari gangguan penjahat yang dewasa ini kian marak. Menurut Erwin Setyo K (2015:13) bahwa pencak silat merupakan sistem beladiri yang diwariskan oleh nenek moyang sebagai budaya bangsa Indonesia sehingga perlu dilestarikan, dibina, dan dikembangkan. Secara umum, banyak buku panduan beladiri pencak silat yang beredar baik terbitan umum maupun pemerintah, namun, dianggap kurang menarik dikarena hanya menyajikan gambar diam. Masyarakat masa sekarang yang senang dengan hal praktis lebih banyak menggunakan telepon pintar/ Gadget untuk mengakses informasi apapun, oleh sebab itu diperlukan alternatif lain misalnya pengembangan sumber belajar materi pencak silat untuk pemula berbasis android. Hal ini harus disadari bahwa guru bukan satu-satunya sumber belajar bagi siswa. Walaupun tegas, peranan dan fungsi guru sangat penting dalam proses pembelajaran. Masyarakat dapat melihat ada banyak sumber belajar yang bukan dari guru seperti lingkungan, buku, media (gambar, televisi, internet, radio) yang bisa digunakan sebagai sumber belajar siswa. </string>
    <string name="latar_belakang_6">Berdasarkan observasi di SMP N 3 Kalasan sebagian besar siswa telah memiliki telepon pintar  android, tetapi hanya digunakan untuk berkomunikasi dan hiburan saja, sama halnya ketika observasi di dusun Soropadan, Condongcatur, Depok, Sleman. Pengembangan sumber belajar berbasis android ini dirasa lebih menarik dan praktis dari pada buku karena: (1) penyajian gambar lebih menarik dan fleksibel. (2) lebih praktis dibawa kemana-mana. (3) tidak memakan banyak tempat. (4) bisa digunakan kapan saja. (5) dapat digunakan di berbagai macam perangkat android (6) sebagian besar kalangan masyarakat telah memiliki telepon pintar android. Pengembangan sumber belajar materi pencak silat untuk pemula berbasis android belum ada di masyarakat. Berdasarkan uraian di atas, maka developer mengadakan penelitian pengembangan yang berjudul “Pengembangan Sumber Belajar Materi Pencak Silat Tingkat Untuk Pemula Berbasis Android”.

</string>
</resources>